force-app/main/default/objects/Course__c/fields/Coursefee__c.field-meta.xml
<CustomField>
    <fullName>Coursefee__c</fullName>
    <label>Coursefee</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>