force-app/main/default/objects/Course__c/fields/First_installment__c.field-meta.xml
<CustomField>
    <fullName>First_installment__c</fullName>
    <label>First installment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>