force-app/main/default/objects/Course__c/fields/second_installment__c.field-meta.xml
<CustomField>
    <fullName>second_installment__c</fullName>
    <label>second installment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>